# pi-web

./: .env.local.example  .gitignore  AGENTS.md  CLAUDE.md  NOTES_extensions.md  PLAN.md  README.md  README.zh-CN.md  app-shell-env.d.ts  index.html  next.config.ts  package.json  playwright.config.ts  playwright.sandbox.config.ts  pnpm-lock.yaml  tailwind.config.ts  tsconfig.base.json  tsconfig.json  vite.config.ts  vitest.config.ts  vitest.node-e2e.config.ts
.ai-rules/: product.md  structure.md  tech.md
app/: globals.css  layout.tsx  page.tsx  providers.tsx  theme-controls.tsx
components/: agent-source-picker.tsx  chat-app.tsx  chat-reasoning.tsx  logging-config-loader.tsx  plugin-panel.tsx
desktop/: .gitignore  build.mjs  electron-builder.yml  node-sidecar.lock.json  package.json  tsconfig.json
desktop/src-tauri/: Cargo.toml  tauri.conf.json
desktop/src-tauri/capabilities/: default.json  panes.json
desktop/src-tauri/frontend/: app.js  index.html  style.css
desktop/src-tauri/icons/: icon.icns
desktop/src-tauri/permissions/: credential.toml  lifecycle.toml  pane-relay.toml  pick-directory.toml
desktop/src-tauri/src/: credential_store.rs  dialog.rs  external_link.rs  main.rs  pane_relay.rs  ready_probe.rs  resolve_artifact.rs  runtime_mode.rs  server_supervisor.rs  startup_error.rs  types.rs  unpack_runtime.rs  window.rs
docs/: agent-authoritative-surface-design.md  agent-source-extensibility-module-design.md  aigc-agent-migration.md  aigc-agent-tab-integration-analysis.md  aigc-streaming-design.md  artifact-extensibility-design.md  attachment-union-store-design.md  bidirectional-shared-state-design.md  builtin-web-tools-design.md  canvas-extension-mechanism-design.md  canvas-kit-kernel-minimal-design.md  codex-tab-reference.md  component-installer-design.md  defect-agent-publish-declaration-gaps.md  defect-manifest-routes-capability-snapshot.md  desktop-cloud-integration-design.md  extensibility-parity-verification.md  extension-skill-installer-design.md  final-tab-architecture-design.md  incident-tool-channel-回传故障-2026-07.md  isolated-panes-design.md  keybinding-config-design.md  model-catalog-design.md  notebooklm-architecture-output.json  notebooklm-tab-architecture-design.md  panelright-slot-isolation.md  pi-sandbox-integration-research.md  pi-trust-loading-design.md  pi-web-host-contract-v1.md  pi-web-集成开发者手册.md  plugin-command-kind-install-analysis.md  refactor-detoolspec-plan.md  release-checklist.md  (+10 more)
(+1276 files in other folders)
