[package]
name = "pi-web-desktop"
version = "0.1.3"
description = "pi-web 桌面版 — Tauri 薄壳，复用 standalone 自包含产物"
edition = "2021"
rust-version = "1.77"

# 可执行名恒为 pi-web：Linux 的 AppImage 拒绝含 `@` 的派生名（旧 electron-builder
# 曾从包名 `@blksails/pi-web-desktop` 派生出非法名），显式钉死可执行名以规避。
[[bin]]
name = "pi-web"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
# ★ 下限 2.11.1：GHSA-7gmj-67g7-phm9（is_local_url() 在 Windows/Android 有 origin 绕过）。
tauri = { version = "2.11.1", features = [] }
# 原生「选择文件夹」对话框（仅 Rust 侧调用，渲染层不授予 dialog:allow-open）。
tauri-plugin-dialog = "2"
# 外链交系统默认浏览器。
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# 外链放行判定需要严谨的 URL 解析（含 IPv6 字面量 `[::1]` 的归一化）。tauri 已传递依赖之。
url = "2"

[target.'cfg(unix)'.dependencies]
# 进程组信号（killpg）。tauri_plugin_shell 的 Command 不暴露进程组，
# 其 kill() 触不到 pi runner 孙进程，故进程树收尾必须走 libc。
libc = "0.2"

[profile.release]
# 体积优先：本壳无热点计算，换取更小的安装包（迁移动机之一）。
opt-level = "s"
lto = true
codegen-units = 1
strip = true
panic = "abort"
